[fix]: Styles error

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -49,17 +49,16 @@ $white: #ffffff
 $general: ('black', $black), ('white', $white), ('grass', $grass), ('grass-light', $grass-light), ('fire', $fire), ('fire-light', $fire-light), ('water', $water), ('water-light', $water-light), ('normal', $normal), ('normal-light', $normal-light), ('flying', $flying), ('flying-light', $flying-light), ('bug', $bug) , ('bug-light', $bug-light) , ('poison', $poison), ('poison-light', $poison-light), ('electric', $electric), ('electric-light', $electric-light), ('ground', $ground) , ('ground-light', $ground-light) , ('fighting', $fighting) , ('fighting-light',$fighting-light) , ('psychic', $psychic) , ('psychic-light', $psychic-light) , ('rock', $rock) , ('rock-light', $rock-light) , ('ice' , $ice) , ('ice-light' , $ice-light) , ('ghost', $ghost) , ('ghost-light',$ghost-light) , ('dragon',$dragon) , ('dragon-light',$dragon-light) , ('dark',$dark) , ('dark-light',$dark-light) , ('steel',$steel) , ('steel-light',$steel-light) , ('fairy',$fairy) , ('fairy-light' , $fairy-light) , ('gray', $gray)
 
 @each $color in $general
-  $name: nth($color, 1)
-  $value: nth($color, 2)
-  .bg-color-#{$color}
-    background-color: $value !important
-  .color-#{$name}
-    color: $value !important
+    $name: nth($color, 1)
+    $value: nth($color,2)
+    .bg-color-#{$name}
+        background-color: $value !important
+    .color-#{$name}
+        color: $value !important
 
 @for $i from 0 through 100
-  .w-#{$i}
-    width: #{$i + 1%}
+    .w-#{$i}
+        width: #{$i * 1%}
 
-  .h-#{$i}
-    height: #{$i + 1%} 
-   
+    .h-#{$i}
+        height: #{$i * 1%}
